<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_setting"
        android:src="@mipmap/main_setting"
        android:padding="5dp"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <RelativeLayout
        android:id="@+id/wifi_connect_layout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/wifi_connect_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/wifi_connect" />

        <ImageView
            android:id="@+id/wifi_connect_state"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/wifi_list_icon" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/wifi_state_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_connect_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wifi_state_tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectting"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ListView
        android:background="@color/app_main_color"
        android:id="@+id/wifi_list"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/wifi_state_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <Button
            android:layout_alignParentBottom="true"
            android:background="@drawable/yellow_shape"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="46dp"
            android:text="@string/home"
            android:textColor="@color/white_2"
            android:textSize="18sp"
            android:id="@+id/button_enter" />

        <Button
            android:layout_alignParentBottom="true"
            android:background="@drawable/yellow_shape"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="46dp"
            android:text="@string/config"
            android:textColor="@color/white_2"
            android:textSize="18sp"
            android:id="@+id/button_smartconfig" />

    </LinearLayout>

</RelativeLayout>